# python-project-49

./: Makefile  README.md  pyproject.toml
brain_games/: .gitignore  Makefile  README.rst  launcher.py  pyproject.toml
brain_games/brain_games/: cli.py
brain_games/games/: brain_calc.py  brain_prime.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  gcd.py  pyproject.toml
brain_games/scripts/scripts/: brain_calc.py  brain_even.py  brain_progression.py  gcd.py
