[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Project 'BRAIN GAMES'"
authors = ["Oleg Latypov <latol179@mail.ru>"]
readme = "README.md"
repository = https://github.com/olegmarlat/python-project-49/blob/main/README.md
packages = [{include = "brain_games"}]
classifiers = [
    "Language :: Python ::  ^3.10",
]
[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"
pip = "^23.3.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
