[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Latypov_Oleg <latol179@mail.ru>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain_games = "brain_games.scripts.brain_games:main"
brain_even = "brain_games.scripts.brain_even:main"
brain_calc = "brain_games.scripts.brain_calc:main"
brain_gcd = "brain_games.scripts.brain_gcd:main"
brain_progression = "brain_games.scripts.brain_progression:main"
